k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasks-app
  labels:
    app.kubernetes.io/part-of: tasks-app
